# tactic

./: Cargo.toml  README.md
src/: ai.rs  game_outcome.rs  gameboard.rs  lib.rs  main.rs  ui.rs  winner.rs
src/ui/: event_handling.rs  game.rs  menu.rs  play_again_menu.rs  setup_menu.rs
src/ui/setup_menu/: menu_loop.rs  menu_options.rs
src/winner/: win_position_constants.rs
