[package]
name = "tactic"
version = "1.1.0"
edition = "2021"
description = "A terminal tic-tac-toe game with AI opponent"
authors = ["generic-user1"]
license = "MIT"
keywords = ["tic-tac-toe", "noughts-and-crosses", "xs-and-os"]
categories = ["command-line-utilities", "games"]
repository = "https://github.com/generic-user1/tactic"

[dependencies]

crossterm = "0.25.0"
rand = "0.8.5"
